--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-in
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mass Tweet and Retweet deleter</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="test">
+
+    </div>
+    <script src="index.js" type="text/javascript">
+
+    </script>
+
+</body>
+
+</html>
