--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="test">
-
+        <h2>My BASIC TEST</h2>
     </div>
     <script src="index.js"
         type="text/javascript">
