Modified landing page texts
Cleanup progress on going live

--- a/landing/index.html
+++ b/landing/index.html
@@ -38,8 +38,8 @@
                   <img class="logo.png" src="./images/logo.png"
                   style=width:80px;px;
                         height:50px;
-                        
-                    >Bookmark Manager</span
+
+                    >Bookmark Manager (BMM)</span
                   >
                 </a>
               </section>
@@ -59,16 +59,16 @@
                 <span class="slogan-bold">Next Generation</span>
               </h1>
               <p>
-                <span class="slogan-bold">Sling In You Link Exactly 1 Second</span>
-                <span class="slogan-bold">Waste No Time At All</span>
-                <span class="slogan-bold">Spare Your Time For The Important Staff</span>
-                <span< class="slogan-bold">We Will Do The Rest</span>
+                <span class="slogan-bold">Sling in your link in exactly 1 second</span>
+                <span class="slogan-bold">Lose no time at all on the tool</span>
+                <span class="slogan-bold">Save your time for the important stuff</span>
+                <span< class="slogan-bold">BookMark Manager will do the rest</span>
               </p>
               <a
                 class="btn btn-primary btn-lg btn-start"
                 target="_blank"
                 href="#y"
-                >Try For 30 Days</a
+                >Download Here</a
               <div>
             </div>
           </div>
@@ -78,13 +78,17 @@
                   height:100px;
                   object-position
                   <div>
-                    <span class="slogan-bold">HOW TO LOAD CHROME EXTENSION</span> 
-                    <span class="slogan-bold">1,Open Your Chrome Browser</span>
-                    <span class="slogan-bold">2,Click On The Three Vertical Dots On Top Right Of Your Screen</span>
-                    <span class="slogan-bold">3,Click On Manage Extensions</span>
+                    <span class="slogan-bold">STEPS TO LOAD THE CHROME EXTENSION</span>
+                    <span class="slogan-bold">Download the zip archive and extract</span>
+                    <span class="slogan-bold">Open your Chrome Browser</span>
+                    <span class="slogan-bold">Click on the three vertical dots on top right of your screen</span>
+                    <span class="slogan-bold">Click On Manage Extensions</span>
+                    <span class="slogan-bold">Turn on Developer mode towards the top right of the screen</span>
+                    <span class="slogan-bold">Click on Load unpacked</span>
+                    <span class="slogan-bold">Navigate to the extension directory, and click select</span>
 
                   </div>
-                </div>      
+                </div>
           </div>
         </div>
       </div>
